# sfsync

./: Cargo.toml  README.md  README_JP.md
.github/workflows/: release.yml
src/: main.rs
