[package]
name = "sfsync"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum関連
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTPリクエスト用（例：ファイルハッシュ取得に使用）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4.5.40", features = ["derive"] }
axum = "0.8.4"

# ファイルハッシュ計算用
blake3 = "1.4.1"
